--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@actions/artifact": "^0.5.1",
     "@actions/core": "^1.2.6",
     "axios": "^0.21.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.27.0"
