--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@actions/artifact": "^0.5.1",
     "@actions/core": "^1.2.6",
     "axios": "^0.21.1",
+    "deep-object-diff": "^1.1.0",
     "fs": "0.0.1-security",
-    "lodash": "^4.17.21"
+    "i": "^0.3.6",
+    "lodash": "^4.17.21",
+    "npm": "^7.9.0"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.27.0"
