--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,5 @@ jobs:
           metaPath: './code/meta.json'
           email: 'test1619427853838@rudderlabs.com'
           accessKey: '1rhrWotHszP3eVma57BzAP67QWA'
+          serverEndpoint: ''
           uploadTestArtifact: true
