--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,8 @@ jobs:
   request:
     runs-on: ubuntu-latest
     env:
-      TEST_ONLY: true
+      if: ${{ github.event_name == 'pull_request' }}
+      TEST_ONLY: false
     steps:
       - uses: actions/checkout@v2
         with:
