--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
   request:
     runs-on: ubuntu-latest
     env:
-      TEST_ONLY: ${{ github.event_name != 'push' }}
+      TEST_ONLY: ${{ github.event_name == 'push' }}
     steps:
       - uses: actions/checkout@v2
         with:
