diff account test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,7 +21,7 @@ jobs:
         uses: ./
         with:
           metaPath: './code/meta.json'
-          email: 'test1619427853838@rudderlabs.com'
-          accessKey: '1rhrWotHszP3eVma57BzAP67QWA'
+          email: 'jayachand+88@rudderstack.com'
+          accessKey: '1segPLUELpRwFmioa1h8OraXhVO'
           serverEndpoint: 'https://aa88e07d9346.ngrok.io'
           uploadTestArtifact: true
