--- a/action.yml
+++ b/action.yml
@@ -7,7 +7,7 @@ inputs:
     email:
         description: 'email'
         required: true
-    accessKey:
+    accessToken:
         description: 'token'
         required: true
     serverEndpoint:
