--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rudder-transformer-action",
   "version": "1.1.0",
-  "description": "",
+  "description": "This Github Action allows developers to test and publish user transformations and libraries directly from their development repository",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -10,18 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@actions/artifact": "^0.5.1",
-    "@actions/core": "^1.2.6",
-    "axios": "^0.21.3",
+    "@actions/artifact": "^1.1.1",
+    "@actions/core": "^1.10.0",
+    "axios": "^1.4.0",
     "deep-object-diff": "^1.1.9",
-    "fs": "0.0.1-security",
-    "i": "^0.3.6",
-    "qs": "^6.11.1",
-    "json-diff": "^0.5.4",
     "lodash": "^4.17.21",
     "npm": "^9.6.7"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.27.0"
+    "@vercel/ncc": "^0.36.1"
   }
 }
