--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This Github Action allows developers to test and publish user transformations and libraries directly from their development repository",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "build": "npx ncc build src/index.js  -o dist"
   },
   "author": "",
@@ -18,6 +18,7 @@
     "npm": "^9.6.7"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.36.1"
+    "@vercel/ncc": "^0.36.1",
+    "jest": "^29.7.0"
   }
 }
