--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -37,8 +37,8 @@ jobs:
         run: TEST_SUITE=true npm test
         working-directory: .
 
-      - name: Upload coverage reports to Codecov
+      - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
-          directory: ./reports/coverage
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
