chore: action yml code changed

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,7 +34,7 @@ jobs:
         working-directory: .
 
       - name: Run Tests
-        run: TEST_SUITE=true npm test
+        run: npm test
         working-directory: .
 
       - name: Upload coverage to Codecov
