--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx ncc build src/index.js  -o dist"
+    "build": "ncc build --no-cache src/index.js  -o dist"
   },
   "author": "",
   "license": "ISC",
@@ -18,8 +18,5 @@
   },
   "devDependencies": {
     "@vercel/ncc": "^0.36.1"
-  },
-  "engines": {
-    "npm": "^9.6.7"
   }
 }
