fix: update the codecov and tests to run on the main branch on push as well

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,12 +1,11 @@
 name: Main Branch PR Tests
 
 on:
-  pull_request:
+  push:
     branches:
       - main
-    types:
-      - opened
-      - synchronize
+      - "release/*"
+  pull_request:
 
 permissions: read-all
 
