--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
-    "build": "ncc build --no-cache src/index.js  -o dist"
+    "build": "ncc build --no-cache src/index.js  -o dist",
+    "lint": "eslint . --ext .js",
+    "prettier": "prettier --check '**/*.js'"
   },
   "author": "",
   "license": "ISC",
@@ -22,7 +24,16 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@eslint/js": "^9.20.0",
     "@vercel/ncc": "^0.36.1",
-    "jest": "^29.7.0"
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "globals": "^15.14.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.0",
+    "prettier-eslint": "^16.3.0"
   }
 }
