chore: added linter and prettier check in the action

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -22,4 +22,7 @@ jobs:
         run: npm install
 
       - name: Run linter
-        run: npm run lint # Adjust this command based on your linter setup
+        run: npm run lint 
+
+      - name: Run prettier
+        run: npm run prettier
