--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,6 @@
 {
-    "semi": false,
+    "semi": true,
     "singleQuote": false,
-    "trailingComma": "none"
+    "trailingComma": "all",
+    "tabWidth": 2
 }
